# ml-stack-demo

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  env.sh  serve.sh  setup.cfg
demo/: env.sh  ml.stack.toml
demo/config/: am.i.a.dog.toml  am.i.a.fish.toml
demo/models/am_i_a_dog/: main.invoke.py  main.test.py
ml_stack_py/: __init__.py  core.py
ml_stack_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: __main__.py  args.rs  breeds.py  constants.rs  main.rs  template.rs  util.rs
src/git/: mod.rs
src/mlflow/: endpoint.rs  mod.rs  model_registry.rs
src/mlflow/config/: mod.rs  model.rs  model_repository.rs  project.rs  tag.rs
src/options/: deploy.rs  experiment.rs  mod.rs  run.rs  sync.rs
src/options/init/: mod.rs  model.rs  model_in_repository.rs  model_repository.rs  project.rs
templates/: env.sh  repo_model_main.py  run.experiment.Dockerfile
