[package]
name = "ml-stack"
version = "0.1.0"
edition = "2021"

[dependencies]
# Command Line
clap = { version = "4.5.41", features = ["derive"] }
# Logging Packages
env_logger = "0.11.8"
log = "0.4.27"
# HTTP Requests
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
# Settings / Serialization
serde = { version = "1.0.219", features = ["derive"] } # Enable derive macros
serde_json = "1.0.141"
tempfile = "3.20.0"
toml = "0.9.2"
