
[metadata]
name = ml-stack-py
version = 0.1.0
author = Kevinnnnn
description = Core library for running ML-Flow experiments crispy clean
long_description = file: README.md
long_description_content_type = text/markdown
license = Illegal to use without a handwritten note

[options]
packages = find:
python_requires = >=3.7
install_requires =
    mlflow